--- a/courses/index.html
+++ b/courses/index.html
@@ -1,11 +1,85 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>Courses — alexdunn.info</title> <meta name="viewport" content="width=device-width, initial-scale=1"/> <meta name="description" content="Alex Dunn is a PhD student at UCSB"/> <meta name="author" content="Alex Dunn"/> <meta name="keywords" content="ucsb, philosophy"/> <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen"/> <link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print"/> <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--> <link href="http://alexdunn.info/courses/index.xml/" rel="alternate" type="application/rss+xml" title="Courses"/> </head> <body> <p class="assistive-text"><a href="#content-start">Skip to main content</a></p> <header class="page-header" role="banner"> <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1> <ul class="top"> <li class="top"><script type="text/javascript">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Courses — alexdunn.info</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="Alex Dunn is a PhD student at UCSB" />
+<meta name="author" content="Alex Dunn" />
+<meta name="keywords" content="ucsb, philosophy" />
+
+  	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+		
+	<link href="http://alexdunn.info/courses/index.xml/" rel="alternate" type="application/rss+xml" title="Courses" />
+
+</head>
+<body>
+
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
+<header class="page-header" role="banner">
+<h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
+<ul class="top">
+<li class="top"><script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> </li> <li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li> <li class="top after"><a href="/cv">CV</a></li> </ul> </header> <main id="content-start" role="main"> <section class="single"> <h2>Course archives</h2> <ul class="courses-archive"> <li><p> S14 <a href="http://alexdunn.info/courses/s14/">Philosophy 1: Intro to Philosophy</a></p></li> <li><p> W14 <a href="http://alexdunn.info/courses/w14/">Philosophy 1: Intro to Philosophy</a></p></li> <li><p> F13 <a href="http://alexdunn.info/courses/f13/">Philosophy 4: Intro to Ethics</a></p></li> </ul> </section> </main> <footer class="page-footer" role="contentinfo"> <p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
+</li>
+<li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li>
+<li class="top after"><a href="/cv">CV</a></li>
+</ul>
+</header>
+
+
+<main id="content-start" role="main">
+
+<section class="single">
+<h2>Course archives</h2>
+<ul class="courses-archive">
+
+	<li><p>
+		F14
+		
+		<a href="http://alexdunn.info/courses/f14/">Philosophy 20A: History of Philosophy</a></p></li>
+
+	<li><p>
+		S14
+		
+		<a href="http://alexdunn.info/courses/s14/">Philosophy 1: Intro to Philosophy</a></p></li>
+
+	<li><p>
+		W14
+		
+		<a href="http://alexdunn.info/courses/w14/">Philosophy 1: Intro to Philosophy</a></p></li>
+
+	<li><p>
+		F13
+		
+		<a href="http://alexdunn.info/courses/f13/">Philosophy 4: Intro to Ethics</a></p></li>
+
+</ul>
+</section>
+
+</main>
+
+<footer class="page-footer" role="contentinfo">
+<p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p> </footer> </body> </html>
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p>
+</footer>
+
+
+</body>
+</html>
