--- a/quarters/f13/index.html
+++ b/quarters/f13/index.html
@@ -1,11 +1,89 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <title>F13 — alexdunn.info</title> <meta name="viewport" content="width=device-width, initial-scale=1"/> <meta name="description" content="Alex Dunn is a PhD student at UCSB"/> <meta name="author" content="Alex Dunn"/> <meta name="keywords" content="ucsb, philosophy"/> <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen"/> <link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print"/> <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--> <link href="http://alexdunn.info/quarters/f13/index.xml/" rel="alternate" type="application/rss+xml" title="F13"/> </head> <body> <p class="assistive-text"><a href="#content-start">Skip to main content</a></p> <header class="page-header" role="banner"> <h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1> <ul class="top"> <li class="top"><script type="text/javascript">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>F13 — alexdunn.info</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="Alex Dunn is a PhD student at UCSB" />
+<meta name="author" content="Alex Dunn" />
+<meta name="keywords" content="ucsb, philosophy" />
+
+  	<link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="/stylesheets/print.css" rel="stylesheet" type="text/css" media="print" />
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+		
+	<link href="http://alexdunn.info/quarters/f13/index.xml/" rel="alternate" type="application/rss+xml" title="F13" />
+
+</head>
+<body>
+
+
+<p class="assistive-text"><a href="#content-start">Skip to main content</a></p>
+
+<header class="page-header" role="banner">
+<h1 class="headline"><a href="/" title="main page">Alex Dunn</a></h1>
+<ul class="top">
+<li class="top"><script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> </li> <li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li> <li class="top after"><a href="/cv">CV</a></li> </ul> </header> <main id="content-start" role="main"> <h2>Academic quarter: F13</h2> <article class="courses" role="article"> <header> <h3 class="courses"> Philosophy 4: Intro to Ethics </h3> </header> <h3 id="toc_0">Sections</h3> <ul> <li><p>Monday 9:00&ndash;9:50AM: Girvetz Hall, Room 2108</p></li> <li><p>Monday 1:00&ndash;1:50PM: Arts Building, Room 1356</p></li> </ul> <h3 id="toc_1">Office Hours</h3> <ul> <li><p>Wednesday 11:00AM&ndash;12:00PM: South Hall, Room 5706</p></li> <li><p>Friday 3:00PM&ndash;4:00PM: Caje</p></li> </ul> </article> </main> <footer class="page-footer" role="contentinfo"> <p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript>
+</li>
+<li class="top after"><a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">Public key</a></li>
+<li class="top after"><a href="/cv">CV</a></li>
+</ul>
+</header>
+
+
+<main id="content-start" role="main">
+<h2>Academic quarter: F13</h2>
+
+
+	<article class="courses" role="article">
+<header>
+<h3 class="courses">
+
+Philosophy 4: Intro to Ethics
+
+</h3>
+</header>
+
+
+<h3 id="toc_0">Sections</h3>
+
+<ul>
+<li><p>Monday 9:00&ndash;9:50AM: Girvetz Hall, Room 2108</p></li>
+
+<li><p>Monday 1:00&ndash;1:50PM: Arts Building, Room 1356</p></li>
+</ul>
+
+<h3 id="toc_1">Office Hours</h3>
+
+<ul>
+<li><p>Wednesday 11:00AM&ndash;12:00PM: South Hall, Room 5706</p></li>
+
+<li><p>Friday 3:00PM&ndash;4:00PM: Caje</p></li>
+</ul>
+
+
+</article>
+
+
+
+</main>
+<footer class="page-footer" role="contentinfo">
+<p>Content copyright © 2014 <a href="/" title="main page">Alex Dunn</a>. Email me at <script type="text/javascript">
 <!--
 h='&#x75;&#x6d;&#x61;&#x69;&#108;&#46;&#x75;&#x63;&#x73;&#98;&#46;&#x65;&#100;&#x75;';a='&#64;';n='&#x61;&#100;&#x75;&#110;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 
-</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p> </footer> </body> </html>
+</script><noscript>&#x61;&#100;&#x75;&#110;&#110;&#32;&#x61;&#116;&#32;&#x75;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x75;&#x63;&#x73;&#98;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;</noscript> (<a href="http://pastebin.com/raw.php?i=CgtqpXYt" title="Pastebin">public key</a>).</p>
+</footer>
+
+</body>
+</html>
