--- a/cair/index.html
+++ b/cair/index.html
@@ -10,7 +10,7 @@
   <![endif]-->
   <script src="//use.typekit.net/ehz8xjj.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
-  <link rel="stylesheet" href="/stylesheets/resume.css">
+  <link rel="stylesheet" href="/stylesheets/screen.css">
 </head>
 <body>
 
