--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#100;&#x
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
 // -->
 </script><noscript>&#100;&#x75;&#110;&#110;&#46;&#x61;&#108;&#x65;&#120;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></p></li>
-<li><p>Website: <a href="http://garbage.world" class="uri">http://garbage.world</a></p></li>
+<li><p>Website: <a href="http://garbage.world">http://garbage.world</a></p></li>
 <li><p>Twitter: <a href="https://twitter.com/dunndunndunn">@dunndunndunn</a></p></li>
 <li><p>GitHub: <a href="https://github.com/dunn">@dunn</a></p></li>
 <li><p>Keybase: <a href="https://keybase.io/dunn">dunn</a></p></li>
