--- a/adrl/index.html
+++ b/adrl/index.html
@@ -11,7 +11,8 @@
     <script src="//use.typekit.net/ehz8xjj.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
-    <link rel="stylesheet" href="../stylesheets/screen.css">
+    <link rel="stylesheet" href="../stylesheets/screen.css" media="screen">
+    <link rel="stylesheet" href="../stylesheets/print.css" media="print">
   </head>
   <body>
 
@@ -37,42 +38,24 @@
                   // -->
             </script><noscript>&#100;&#x75;&#110;&#110;&#46;&#x61;&#108;&#x65;&#120;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></p></li>
         <li><p>Website: <a href="http://garbage.world">http://garbage.world</a></p></li>
-        <li><p>Twitter: <a href="https://twitter.com/dunndunndunn">@dunndunndunn</a></p></li>
         <li><p>GitHub: <a href="https://github.com/dunn">@dunn</a></p></li>
         <li><p>Keybase: <a href="https://keybase.io/dunn">dunn</a></p></li>
       </ul>
     </section>
 
     <section class="info skills">
-      <h2>I can do things with</h2>
+      <h2>Languages</h2>
       <ul>
         <li><p>Ruby</p></li>
         <li><p>JavaScript</p></li>
         <li><p>Emacs Lisp</p></li>
         <li><p>Bash</p></li>
-        <li><p>AWK</p></li>
       </ul>
-
-      <h2>I can communicate complex ideas clearly</h2>
-      <p>Having studied philosophy for five years, where highly
-        abstract ideas can be difficult to convey, I prioritize
-        clarity of expression in my work. Teaching philosophy to
-        undergraduates has helped me become a better and more
-        empathetic speaker.  I’m continually working to make my
-        writing accessible, and I’ve written several introductions to
-        philosophical concepts
-        using <a href="http://baruffio.com/t/philosophy/" title="The
-                                                                 Philosophy tag on Baruffio.com"><em>Harry Potter</em></a> to
-        make the ideas fun and easy to grasp general audiences.</p>
-
-      <h2>I can research quickly and carefully</h2>
-      <p>Despite a back injury that prevented me from working for 2
-        months, I researched and wrote
-        a <a href="http://alexdunn.info/docs/thesis/" title="HTML
-        version">100-page thesis</a> between September 2011 and April
-        2012; this involved familiarizing myself with the contemporary
-        literature on analytic metaphysics to the point where I could
-        fruitfully engage with it.</p>
+      <h2>Tools</h2>
+      <ul>
+        <li><p>Git</p></li>
+        <li><p>Ansible</p></li>
+      </ul>
     </section>
 
     <hr>
